# agentic_ml

./: README.md  README_ENG.md  README_GER.md  evaluate.py  generate_embeddings.py  main.py  predictions.csv  pyproject.toml  run_local.py
data/: predictions.csv  predictions_local.csv  test.csv  test_embeddings.csv  train.csv  validation_full.csv  validation_full_embeddings.csv
src/: llm_feature_extractor.py  pipeline.py
src/agent/: graph.py  run.py  state.py
src/agent/nodes/: data.py  ingest.py  llm_extract.py  ml_train.py  model.py  output.py  predict.py  schema.py
